tindalwic.abnf
;# This is a rough sketch of the Tindalwic format. Some people will find this format
;# easier to use than the English description in the manifesto. They are the audience
;# for this file. It is incomplete because INDENT/DEDENT are impossible to express with
;# rules, so it is not intended to be used by any of the ABNF tools.

;# The Python parser is a canonical example of a custom lexer that emits INDENT/DEDENT
;# tokens. That kind of language greedily consumes all the whitespace at the start of
;# each line. But Tindalwic is different: only HTAB chars count, and the number is
;# strictly monotonic. INDENT adds exactly one HTAB, and DEDENT removes exactly one HTAB.
;# So the first char on a line after the indentation can be a HTAB.

;# Because this file is not meant for tools, a non-standard EXCLUDE is imagined...

LF = %x0A
HTAB = %x09
OCTET = %x00-FF
dot = EXCLUDE( %x00-FF, LF ) ;# these rules do not validate/decode the 8-bit UTF-8
restricted = EXCLUDE( dot, HTAB / "#<>[]{}/@=" )

line = *dot LF
utf8 = INDENT *line DEDENT ;# first char of line can be HTAB
comment = "#" line [utf8]

;# linear arrays

list = INDENT [comment] *list-item DEDENT
list-item = ( list-text / list-list / list-dict / list-short ) [comment]
list-text = "<>" LF [utf8]
list-list = "[]" LF [list]
list-dict = "{}" LF [dict]
list-short = [restricted *dot] LF

;# associative arrays

key-comment = [LF] "//" line [utf8]

dict = INDENT [comment] *dict-item DEDENT
dict-item = [key-comment] ( dict-text / dict-list / dict-dict / dict-short ) [comment]
dict-text = ( "<" *dot ">" / "@" line utf8 "<>" ) LF [utf8]
dict-list = ( "[" *dot "]" / "@" line utf8 "[]" ) LF [list]
dict-dict = ( "{" *dot "}" / "@" line utf8 "{}" ) LF [dict]
dict-short = restricted *( EXCLUDE( dot, "=" ) ) "=" line

;# outermost context

hashbang = "#!" line [utf8]
root = [hashbang] [comment] *dict-item
